# roboDev

./: .gitignore  README.md
docs/: environment  environment~
project/includes/: FLAGS.cc  FLAGS.h  MSG.h  flags
project/sense/: Constants.h
project/sense/sense_ir/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  clean.sh  cmake_install.cmake  infraRed.cpp  infraRed.h  kate  main.cxx  main.cxx.backup  rsbInformer.cpp  rsbInformer.h
tools/: README  cr
